syntax = "proto3";
option csharp_namespace = "BurgerGrpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package burger;

service Burger {
	rpc PlaceOrder(PlaceOrderMessage) returns (OrderPlacedMessage);
	rpc GetReadyOrders(google.protobuf.Empty) returns (stream OrderReadyMessage);
	rpc SmartCooking(stream SmartCookMessage) returns (stream SmartCookResponseMessage);
}

message PlaceOrderMessage {
	OrderType type = 1;
}

message OrderPlacedMessage {
	int32 order_id = 1;
	float cost = 2;
	google.protobuf.Timestamp date = 3;
	string message = 4;
}

enum OrderType {
	BURGER = 0;
	POCKET = 1;
}

message OrderReadyMessage {
	int32 order_id = 1;
}

message SmartCookMessage {
	bool flip = 1;
}

message SmartCookResponseMessage {
	string message = 1;
}